Jane random bug squash (#248)
* Adding role authorization back to grant page

* Random fixes

--- a/frontend/src/main-page/header/styles/AccountInfo.css
+++ b/frontend/src/main-page/header/styles/AccountInfo.css
@@ -12,15 +12,14 @@
   position: absolute;
   padding: 20px 40px;
   background-color: white;
-  border: 3px solid #2d2d2d;
-  border-radius: 16px;
+  border: 1px solid #2d2d2d;
+  border-radius: 8px;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
   z-index: 9999;
 }
 
 .popup-header {
   color: #000;
-  font-family: Montserrat;
   font-size: 22px;
   font-style: normal;
   font-weight: 100;
@@ -51,7 +50,6 @@
 
 .info-label {
   color: #646464;
-  font-family: Montserrat;
   font-size: 15px;
   font-style: normal;
   font-weight: 700;
@@ -61,7 +59,6 @@
 
 .info-value {
   color: #000;
-font-family: Montserrat;
 font-size: 15px;
 font-style: normal;
 font-weight: 400;
